Added vairaj jindal's photo

--- a/teams/curry.html
+++ b/teams/curry.html
@@ -34,7 +34,7 @@
   </div>
 </div>
     </nav>
-    <div class="title" style="padding: 200px;margin: 0px;text-align: right; background-image: url('/jbpl23/assets/img/manager_photos/krishiv.jpeg'); background-repeat: no-repeat; background-size: cover; color:white">
+    <div class="title" style="padding: 200px;margin: 0px;text-align: right; background-image: url('/jbpl23/assets/img/manager_photos/vairaj_jindal.jpg'); background-repeat: no-repeat; background-size: cover; color:white">
       <h1 style="font-size: 100px;">Curry Blasters</h1>
       <h5 style="font-size: 40px;">Viraj Jindal</h5>
       <img src="/jbpl23/assets/img/team_logos/curry blasters.png" alt="" height="200px" width="200px" style="padding-top: 0px;">
