--- a/teams/curry.html
+++ b/teams/curry.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curry Blasters</title>
-    <link rel="stylesheet" href="/jbpl23/css/team.css">
-    <link rel="stylesheet" href="/jbpl23/css/cards.css">
+    <link rel="stylesheet" href="/css/team.css">
+    <link rel="stylesheet" href="/css/cards.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -13,9 +13,9 @@
 </head>
 <body style="display: block; font-family: 'Helvetica Neue';">
     <nav>
-        <a class="navbar-brand" href="/jbpl23/index.html"><img src="/jbpl23/assets/img/team_logos/LOGO FINAL PNG.png" alt="JBPL logo" height="85px;" width="85px;"s></a>
-        <a class="navbar-text" href="/jbpl23/pools.html">Pools</a>
-        <a class="navbar-text" href="/jbpl23/gallery.html">Gallery</a>
+        <a class="navbar-brand" href="/index.html"><img src="/assets/img/team_logos/LOGO FINAL PNG.png" alt="JBPL logo" height="85px;" width="85px;"s></a>
+        <a class="navbar-text" href="/pools.html">Pools</a>
+        <a class="navbar-text" href="/gallery.html">Gallery</a>
         <a class="btn btn-warning dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Teams
         </a>
@@ -34,10 +34,10 @@
   </div>
 </div>
     </nav>
-    <div class="title" style="padding: 200px;margin: 0px;text-align: right; background-image: url('/jbpl23/assets/img/manager_photos/vairaj_jindal.jpg'); background-repeat: no-repeat; background-size: cover; color:white">
+    <div class="title" style="padding: 200px;margin: 0px;text-align: right; background-image: url('/assets/img/manager_photos/vairaj_jindal.jpg'); background-repeat: no-repeat; background-size: cover; color:white">
       <h1 style="font-size: 100px;">Curry Blasters</h1>
       <h5 style="font-size: 40px;">Viraj Jindal</h5>
-      <img src="/jbpl23/assets/img/team_logos/curry blasters.png" alt="" height="200px" width="200px" style="padding-top: 0px;">
+      <img src="/assets/img/team_logos/curry blasters.png" alt="" height="200px" width="200px" style="padding-top: 0px;">
     </div>
     <div class="quote--container">
       <p class="quote quote-text">
