--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/ocs_photo/kanav.jpg" alt="..." />
                             <h4>Kanav Baid</h4>
                             <p class="text-muted">Role</p>
 
