--- a/pools.html
+++ b/pools.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tables</title>
-    <link rel="stylesheet" href="/jbpl23/css/tables.css">
+    <link rel="stylesheet" href="/css/tables.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@ text-decoration: none;}
   <body style="font-family: Helvetica Neue; ">
     <nav>
         <ul>
-          <a class="active navbar-brand" href="index.html"><img src="/jbpl23/assets/img/team_logos/LOGO FINAL PNG.png" alt="JBPL logo" height="85px;" width="85px;"s>
+          <a class="active navbar-brand" href="index.html"><img src="/assets/img/team_logos/LOGO FINAL PNG.png" alt="JBPL logo" height="85px;" width="85px;"s>
           <a href="gallery.html">Gallery</a></li>
           <a href="top_scorers.html">Top Scorers</a></li>
           <div class="dropdown show">
