updated the pools table

--- a/pools.html
+++ b/pools.html
@@ -65,43 +65,53 @@ text-decoration: none;}
             <tbody class="table-group-divider">
               <tr>
                 <th scope="row">1</th>
-                <td>Error 404</td>
-                <td>3</td>
-                <td>1</td>
-                <td>0</td>
-                <td>2</td>
-                <td>+1</td>
-                <td>4</td>
+                <td>Skull Crushers</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
                 <td>Bomb Squad</td>
-                <td>3</td>
-                <td>1</td>
-                <td>0</td>
-                <td>2</td>
-                <td>+1</td>
-                <td>4</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>Skull Crushers</td>
-                <td>3</td>
-                <td>1</td>
-                <td>0</td>
-                <td>2</td>
-                <td>+1</td>
-                <td>4</td>
+                <td>Curry Blasters</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
               </tr>
               <tr>
                 <th scope="row">4</th>
-                <td>Thunder Warriors</td>
-                <td>3</td>
-                <td>0</td>
-                <td>2</td>
-                <td>0</td>
-                <td>-3</td>
-                <td>0</td>
+                <td>Space Monkey Mafia</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>Invincible Knights</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
               </tr>
             </tbody>
         </table>
@@ -121,43 +131,53 @@ text-decoration: none;}
             <tbody class="table-group-divider">
               <tr>
                 <th scope="row">1</th>
-                <td>Curry Blasters</td>
-                <td>3</td>
-                <td>1</td>
-                <td>0</td>
-                <td>2</td>
-                <td>+1</td>
-                <td>4</td>
+                <td>Thunder Warriors</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Spice FC</td>
-                <td>3</td>
-                <td>1</td>
-                <td>0</td>
-                <td>2</td>
-                <td>+1</td>
-                <td>4</td>
+                <td>Error 404</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>Space Monkey Mafia</td>
-                <td>3</td>
-                <td>1</td>
-                <td>0</td>
-                <td>2</td>
-                <td>+1</td>
-                <td>4</td>
+                <td>Mercurial Wingers</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
               </tr>
               <tr>
                 <th scope="row">4</th>
+                <td>Spice FC</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
                 <td>Fear Control</td>
-                <td>3</td>
-                <td>0</td>
-                <td>2</td>
-                <td>0</td>
-                <td>-3</td>
-                <td>0</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
+                <td>NA</td>
               </tr>
             </tbody>
         </table>
