updated poolA to Pool A and added ojal

--- a/pools.html
+++ b/pools.html
@@ -46,8 +46,8 @@ text-decoration: none;}
     </header>  
     <section style="text-align: center;">
       <select onchange="show(value)" id="drp" style="margin: 20px; font-size: 20px; padding: 10px; width: 20%;">
-        <option value='table1'>poolA</option>
-        <option value='table2'>poolB</option>
+        <option value='table1'>Pool A</option>
+        <option value='table2'>Pool B</option>
         </select>
         <table id="table1" class="table table-striped">
             <thead>
