--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/ocs_photo/bhavya.jpeg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/ocs_photo/bhavya.jpeg" alt="Bhavya" />
                             <h4>Bhavya Begani</h4>
                             <p class="text-muted">Role</p>
 
@@ -260,7 +260,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/ocs_photo/ojal.jpeg" alt="Ojal" />
                             <h4>Ojal Bansal</h4>
                             <p class="text-muted">Role</p>
 
@@ -268,7 +268,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/ocs_photo/kanav.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/ocs_photo/kanav.jpg" alt="Kanav" />
                             <h4>Kanav Baid</h4>
                             <p class="text-muted">Role</p>
 
