--- a/teams/wingers.html
+++ b/teams/wingers.html
@@ -57,7 +57,7 @@
         <div class="modal fade" id="goalie_modal" tabindex="-1" role="dialog" aria-labelledby="goalie_modalTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
               <div class="modal-content" style="background-color: transparent;">
-                <img src="/assets/img/teams/mercurial_wingers/coconut.png" alt="">
+                <img src="/assets/img/teams/mercurial_wingers/pranay_sareen.png" alt="">
               </div>
             </div>
           </div>
@@ -65,7 +65,7 @@
         <div class="modal fade" id="right_defender" tabindex="-1" role="dialog" aria-labelledby="right_defenderTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
-                  <img src="/assets/img/teams/mercurial_wingers/aryaveer.png" alt="">
+                  <img src="/assets/img/teams/mercurial_wingers/hetansh vasoya.png" alt="">
                 </div>
               </div>
             </div>
@@ -73,7 +73,7 @@
         <div class="modal fade" id="left_defender" tabindex="-1" role="dialog" aria-labelledby="left_defenderTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
-                  <img src="/assets/img/teams/mercurial_wingers/rishi_modi.png" alt="">
+                  <img src="/assets/img/teams/mercurial_wingers/coconut.png" alt="">
                 </div>
               </div>
             </div>
@@ -81,15 +81,15 @@
         <div class="modal fade" id="central_defender" tabindex="-1" role="dialog" aria-labelledby="central_defenderTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
-                  <img src="/assets/img/teams/mercurial_wingers/hetansh vasoya.png" alt="">
+                  <img src="/assets/img/teams/mercurial_wingers/samar vallabh.png" alt="">
                 </div>
               </div>
             </div>
-        <button class="player" data-toggle="modal" data-target="#mid_fielder" data-player="Mid Fielder" style="top: 48.5%; left: 49%;"></button>
+        <button class="player" data-toggle="modal" data-target="#mid_fielder" data-player="Mid Fielder" style="top: 78.5%; left: 49%;"></button>
         <div class="modal fade" id="mid_fielder" tabindex="-1" role="dialog" aria-labelledby="mid_fielderTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
-                  <img src="/assets/img/teams/mercurial_wingers/pranay_sareen.png" alt="">
+                  <img src="/assets/img/teams/mercurial_wingers/Samarth Jain.png" alt="">
                 </div>
               </div>
             </div>
@@ -101,22 +101,22 @@
                 </div>
               </div>
             </div>
-        <button class="player" data-toggle="modal" data-target="#left_strike" data-player="Left Strike" style="top: 18.5%; left: 69.5%;"></button>
+        <button class="player" data-toggle="modal" data-target="#left_strike" data-player="Left Mid" style="top: 18.5%; left: 49%;"></button>
         <div class="modal fade" id="left_strike" tabindex="-1" role="dialog" aria-labelledby="left_strikeTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
-                  <img src="/assets/img/teams/mercurial_wingers/Samarth Jain.png" alt="">
+                  <img src="/assets/img/teams/mercurial_wingers/rishi_modi.png" alt="">
                 </div>
               </div>
             </div>
-        <button class="player" data-toggle="modal" data-target="#right_strike" data-player="Right Strike" style="top: 78.5%; left: 69.5%;"></button>
+        <!-- <button class="player" data-toggle="modal" data-target="#right_strike" data-player="Right Strike" style="top: 78.5%; left: 69.5%;"></button>
         <div class="modal fade" id="right_strike" tabindex="-1" role="dialog" aria-labelledby="right_strikeTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
                   <img src="/assets/img/teams/mercurial_wingers/samar vallabh.png" alt="">
                 </div>
               </div>
-            </div>
+            </div> -->
     </div>
     <h1 class="title display-2" style="text-align: center;">Players</h1>
     <div class="flex-container players">
