added all the teams players and their positions
except goya's team

--- a/teams/error.html
+++ b/teams/error.html
@@ -65,7 +65,7 @@
         <div class="modal fade" id="right_defender" tabindex="-1" role="dialog" aria-labelledby="right_defenderTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
-                  <img src="/assets/img/teams/error_404/krish_gupta.png" alt="">
+                  <img src="/assets/img/teams/error_404/Aarav Tater.png" alt="">
                 </div>
               </div>
             </div>
@@ -73,7 +73,7 @@
         <div class="modal fade" id="left_defender" tabindex="-1" role="dialog" aria-labelledby="left_defenderTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
-                  <img src="/assets/img/teams/error_404/Aarav Tater.png" alt="">
+                  <img src="/assets/img/teams/error_404/krish_gupta.png" alt="">
                 </div>
               </div>
             </div>
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </div>
-        <button class="player" data-toggle="modal" data-target="#mid_fielder" data-player="Mid Fielder" style="top: 48.5%; left: 49%;"></button>
+        <button class="player" data-toggle="modal" data-target="#mid_fielder" data-player="Mid Fielder" style="top: 78.5%; left: 49%;"></button>
         <div class="modal fade" id="mid_fielder" tabindex="-1" role="dialog" aria-labelledby="mid_fielderTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
@@ -93,15 +93,15 @@
                 </div>
               </div>
             </div>
-        <!-- <button class="player" data-toggle="modal" data-target="#center_strike" data-player="Center Strike" style="top: 48.5%; left: 69.5%;"></button>
+        <button class="player" data-toggle="modal" data-target="#center_strike" data-player="Center Strike" style="top: 48.5%; left: 69.5%;"></button>
         <div class="modal fade" id="center_strike" tabindex="-1" role="dialog" aria-labelledby="center_strikeTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
-                  
+                  <img src="/assets/img/teams/error_404/firoz khullar.png" alt="">
                 </div>
               </div>
-            </div> -->
-        <button class="player" data-toggle="modal" data-target="#left_strike" data-player="Left Strike" style="top: 18.5%; left: 69.5%;"></button>
+            </div>
+        <button class="player" data-toggle="modal" data-target="#left_strike" data-player="Left Strike" style="top: 18.5%; left: 49%;"></button>
         <div class="modal fade" id="left_strike" tabindex="-1" role="dialog" aria-labelledby="left_strikeTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
@@ -109,14 +109,14 @@
                 </div>
               </div>
             </div>
-        <button class="player" data-toggle="modal" data-target="#right_strike" data-player="Right Strike" style="top: 78.5%; left: 69.5%;"></button>
+        <!-- <button class="player" data-toggle="modal" data-target="#right_strike" data-player="Right Strike" style="top: 78.5%; left: 69.5%;"></button>
         <div class="modal fade" id="right_strike" tabindex="-1" role="dialog" aria-labelledby="right_strikeTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
                 <div class="modal-content" style="background-color: transparent;">
                   <img src="/assets/img/teams/error_404/firoz khullar.png" alt="">
                 </div>
               </div>
-            </div>
+            </div> -->
     </div>
     <h1 class="title display-2" style="text-align: center;">Players</h1>
     <div class="flex-container players">
