Fixed mercury to mercurial

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 Teams
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item nav-link" href="teams/wingers.html">Mercury Wingers</a></li>
+                                <li><a class="dropdown-item nav-link" href="teams/wingers.html">Mercurial Wingers</a></li>
                                 <li><a class="dropdown-item nav-link" href="teams/curry.html">Curry Blasters</a></li>
                                 <li><a class="dropdown-item nav-link" href="teams/spice.html">Spice FC</a></li>
                                 <li><a class="dropdown-item nav-link" href="teams/bomb.html">Bomb Squad</a></li>
