--- a/pools.html
+++ b/pools.html
@@ -28,7 +28,7 @@ text-decoration: none;}
           <div class="dropdown show">
             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="teams/wingers.html">Mercury Wingers</a></li>
+              <li><a class="dropdown-item" href="teams/wingers.html">Mercurial Wingers</a></li>
               <li><a class="dropdown-item" href="teams/curry.html">Curry Blasters</a></li>
               <li><a class="dropdown-item" href="teams/spice.html">Spice FC</a></li>
               <li><a class="dropdown-item" href="teams/bomb.html">Bomb Squad</a></li>
