--- a/gallery.html
+++ b/gallery.html
@@ -141,7 +141,7 @@ body {
                   </a>
                 
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <a class="dropdown-item" href="teams/wingers.html">Mercury Wingers</a> 
+                      <a class="dropdown-item" href="teams/wingers.html">Mercurial Wingers</a> 
                       <a class="dropdown-item" href="teams/curry.html">Curry Blasters</a> 
                       <a class="dropdown-item" href="teams/spice.html">Spice FC</a> 
                       <a class="dropdown-item" href="teams/bomb.html">Bomb Squad</a> 
