--- a/teams/fear.html
+++ b/teams/fear.html
@@ -22,7 +22,7 @@
         </a>
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <a class="dropdown-item" href="wingers.html">Mercury Wingers</a> 
+    <a class="dropdown-item" href="wingers.html">Mercurial Wingers</a> 
     <a class="dropdown-item" href="curry.html">Curry Blasters</a> 
     <a class="dropdown-item  " href="spice.html">Spice FC</a> 
     <a class="dropdown-item  " href="bomb.html">Bomb Squad</a> 
