--- a/teams/fear.html
+++ b/teams/fear.html
@@ -140,9 +140,9 @@
       <div>
         <img src="/assets/img/teams/fear_control/Madhav Singhania.png" alt="" width="320px" height="400px">
       </div>
-      <div>
+      <!-- <div>
         <img src="/assets/img/teams/fear_control/shivaan.png" alt="" width="320px" height="400px">
-      </div>
+      </div> -->
     </div>
 </body>
 </html>
