removed satvik's background

--- a/teams/skull.html
+++ b/teams/skull.html
@@ -54,7 +54,7 @@
         <div class="modal fade" id="goalie_modal" tabindex="-1" role="dialog" aria-labelledby="goalie_modalTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document" style="background-color: transparent; border: 0pxT;">
               <div class="modal-content" style="background-color: transparent;">
-                <img src="/assets/img/teams/skull_crushers/satvik.jpeg" alt="">
+                <img src="/assets/img/teams/skull_crushers/satvik.png" alt="">
               </div>
             </div>
           </div>
