removed black people

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="pools.html">Pools</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#about">Awards</a></li>
+                            <li class="nav-item"><a class="nav-link" href="top_scorers.html">Awards</a></li>
                             <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                         </ul>
                     </div>
