--- a/gallery.html
+++ b/gallery.html
@@ -66,25 +66,30 @@
                 <div class="swiper-slide">
                   <div class="blockImg">
                     <img class="mainImg image-block" src="/assets/img/photos/week1/Screenshot 2024-02-23 at 21.09.13.png">
-                    <img class="mainImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft18.svg">
+                    <!-- <img class="mainImg" src=""> -->
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                   <div class="blockImg">
+                    <!--
+                    <img class="mainImg image-block" src="">
+                    <img class="mainImg" src=""> -->
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="blockImg">
-                    <img class="mainImg image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft9.svg">
-                    <img class="mainImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft17.svg">
+                    <!--
+                    <img class="mainImg" src="">
+                    <img class="mainImg" src="">
+                    -->
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="blockImg">
-                    <img class="mainImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft18.svg">
-                    <img class="mainImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft20.svg">
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="blockImg">
-                    <img class="mainImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft17.svg">
-                    <img class="mainImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft9.svg">
+                    <!--
+                    <img class="mainImg" src="">
+                    <img class="mainImg" src="">
+                    -->
                   </div>
                 </div>
               </div>
